--- a/DATA_MINING_HW4/DATA_MINING_HW4_LIAM_PHAN.Rmd
+++ b/DATA_MINING_HW4/DATA_MINING_HW4_LIAM_PHAN.Rmd
@@ -1099,7 +1099,7 @@ print(paste("Top decile lift by ordering the data by the predictions, and comput
 
 </center>
 
-> Comments: Our first decile is having a mean-response of 1.774. We can see that our first decile show us that our model is doing almost twice as better as a base random model. Then it quikly fall off from the 5th deciles and so on. 
+> Comments: Our first decile is having a mean-response of 1.774. We can see that our first decile show us that our model is doing almost twice as better as a base random model. Then it quickly fall off from the 5th deciles and so on. 
 
 ## b. Run a boosted tree with the same predictors
 
@@ -1634,27 +1634,6 @@ rect.hclust(stability_hc2, k = k1, border = 2:5)
 
 
 > Comments: We can see that for single linkage method, the clusters structure don't change a lot, but for complete linkage, there is some changes in the clustering. Single linkage seem more stable than complete linkage in this case, we also could test below 20% and we would get closer to our original data clustering. In general, since the big proportion of random removal, we can see that our clusters are quite stable using both method.  
-
-### <span style="color: #1c6155;">Centroid for Single Linkage and Complete Linkage with 5 Clusters</span>
-
-
-```{r centroid for single linkage 1}
-
-## Centroid Computation 
-clusters1_stability <- cutree(stability_hc1, k=k1)
-cluster_center1_stability = aggregate(Cereals_Preprocess_Randomly[,4:16],list(cluster=clusters1_stability),mean)
-
-
-```
-
-
-```{r centroid for complete linkage 2}
-
-## Centroid Computation 
-clusters2_stability <- cutree(stability_hc2, k=k1)
-cluster_center2_stability = aggregate(Cereals_Preprocess_Randomly[,4:16],list(cluster=clusters2_stability),mean)
-
-```
 
 
 ## c. Choose one of the methods. How many clusters would you use? What distance is used for this cutoff?
